--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 margin-right:20px;
                 margin-left:20px;
                 border-bottom-left-radius:35px;
-                border-top-right-radius:35px;
+                border-bottom-right-radius:35px;
                 box-shadow: 10px 10px 5px rgb(238, 214, 119);
             }
             .navbar:hover{
