--- a/index.html
+++ b/index.html
@@ -2,37 +2,7 @@
 <html>
     <head>
         <title>Navbar</title>
-        <style>
-            .navbar{
-                background-color: #ff9900;
-                padding:20px;
-                margin-top:20px;
-                margin-right:20px;
-                margin-left:20px;
-                border-bottom-left-radius:35px;
-                border-bottom-right-radius:35px;
-                box-shadow: 10px 10px 5px rgb(238, 214, 119);
-            }
-            .navbar:hover{
-                padding:25px;
-                transition:0.4s;
-            }
-            .menu{
-                text-decoration: none;
-                background-color: #595959;
-                margin-left: 10px;
-                margin-right: 10px;
-                padding:10px;
-                border-radius:10px;
-                color: #ffffff;
-            }
-            .menu:hover{
-                background-color:#333333;
-                transition:0.5s;
-                padding-left:12px;
-                padding-right:12px;
-            }
-            </style>
+        <link rel="stylesheet" href="./css/index.css"/>
     </head>
     <body>
         <div class="navbar">
